--- a/apoio/pom.xml
+++ b/apoio/pom.xml
@@ -31,6 +31,10 @@
 		<spring-ai.version>1.0.1</spring-ai.version>
 	</properties>
 	<dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
