--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,8 @@
-#spring.application.name=cadastro-convidado
+spring.application.name=cadastro-convidado
 
 spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.jpa.hibernate.ddl-auto=update
+spring.h2.console.path=/h2-console
+spring.datasource.url=jdbc:h2:mem:usuarios
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=
+spring.datasource.password=
